# test

./: CMakeLists.txt  print_gcc_version.c
advanced_cpp/: Makefile  advanced_test  advanced_test.cpp  class_test  class_test.cpp  deconstruction_test  explicit_test  explicit_test.cpp  final_test  lambda_test  lambda_test.cpp  move_semantics_test  new_test  new_test.cpp  range_for_test  range_for_test.cpp  smart_point_test  static_test  static_test.cpp  stl_test  stl_test.cpp  template_test
c_test/: SimpleSection.c  SimpleSection.cpp  SpecialSymbol.c  base64.c  base64_test  crc32_bytewise.c  crc32_simple.c  endian.c  endian_test  print_gcc_version.c  sprintf_test  sprintf_test.c  sscanf_test  sscanf_test.c  str_test.c  strlen_test  strlen_test.c  strtok_test  strtok_test.c  strtol_test  strtol_test.c
cmake_test/: CMakeCache.txt  CMakeLists.txt  Makefile  Tutorial  cmake_install.cmake  tutorial.cpp
cpp_core/: C21.cpp  CMakeLists.txt  F43.cpp  Makefile
cpp_test/: Makefile  SimpleSection.c  address_sanitizer_test.cpp  array_test.cpp  auto_test.cpp  bind_nullptr.cpp  bitset_test.cpp  bool_test  bool_test.cpp  boost_test  boost_test.cpp  byte_test  byte_test.cpp  cast_test.cpp  class_test  class_test.cpp  const_test.cpp  constexpr_class_test.cpp  core.370012  decltype_test.cpp  deconstruction_test.cpp  default_constructor_test.cpp  delete_test.cpp  double_dispatch.cpp  dynamic_cast.cpp  endian  endian.cpp  endian_test  enum_class_test.cpp  explicit_test.cpp  fetch  final_test.cpp  find_test.cpp  for_test.cpp  friend_test.cpp  function_test.cpp  generic_algorithm.cpp  (+70 more)
(+208 files in other folders)
